[gd_scene load_steps=19 format=3 uid="uid://d1hnawkho7eos"]

[ext_resource type="Script" uid="uid://drf17f1mu335f" path="res://StateMachine/StateMachine.gd" id="1_0mgtc"]
[ext_resource type="Script" uid="uid://bnmya4eogwhr2" path="res://Characters/Enemies/Bosses/DarkMage/DarkMage.gd" id="1_3rra0"]
[ext_resource type="Texture2D" uid="uid://b2dekgtow3y6x" path="res://Resources/enemies/dark-mage.png" id="2_30p61"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_okdyn"]
[ext_resource type="Script" uid="uid://dlg1hg2cirujf" path="res://Characters/Enemies/Bosses/DarkMage/DarkMageStates/DarkMageIdleState.gd" id="4_rx5la"]
[ext_resource type="Script" uid="uid://b2r3ymev6pg77" path="res://Characters/Enemies/Bosses/DarkMage/DarkMageStates/DarkMageInvincibleState.gd" id="5_abxnd"]
[ext_resource type="Script" uid="uid://bq4x580cxpfxf" path="res://Characters/Enemies/Bosses/DarkMage/DarkMageStates/DarkMageAttackState.gd" id="6_ki4rp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bvjc4"]
atlas = ExtResource("2_30p61")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jbuy"]
atlas = ExtResource("2_30p61")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfwn5"]
atlas = ExtResource("2_30p61")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ofm"]
atlas = ExtResource("2_30p61")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ld8"]
atlas = ExtResource("2_30p61")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqdbs"]
atlas = ExtResource("2_30p61")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_davsa"]
atlas = ExtResource("2_30p61")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7r60"]
atlas = ExtResource("2_30p61")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0r8tm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvjc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jbuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfwn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ofm")
}],
"loop": true,
"name": &"cast_orb",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ld8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqdbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_davsa")
}],
"loop": true,
"name": &"cast_staff",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7r60")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d011f"]
radius = 20.0
height = 50.0

[sub_resource type="LabelSettings" id="LabelSettings_sysb6"]
font = ExtResource("3_okdyn")
font_size = 9
font_color = Color(1, 0, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.478431)

[node name="DarkMage" type="CharacterBody2D"]
z_index = 4
collision_layer = 10
collision_mask = 13
script = ExtResource("1_3rra0")
health = 500

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0r8tm")
animation = &"cast_orb"
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d011f")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 2
debug_enabled = true

[node name="CastLocation" type="Node2D" parent="."]
position = Vector2(-18, -15)

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="SpikeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_0mgtc")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_rx5la")

[node name="Invincible" type="Node" parent="StateMachine" node_paths=PackedStringArray("dark_mage")]
script = ExtResource("5_abxnd")
dark_mage = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("dark_mage")]
script = ExtResource("6_ki4rp")
dark_mage = NodePath("../..")

[node name="StatusLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -18.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 1.0
text = "STUN"
label_settings = SubResource("LabelSettings_sysb6")

[connection signal="timeout" from="CannonTimer" to="." method="_fire_cannon"]
[connection signal="timeout" from="SpikeTimer" to="." method="_fire_spike"]
